Fixes in z-index and hamburger colors

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     --secondary-font-color: #999999;
     --main-color: rgb(0, 0, 0);
     --secondary-color: rgb(8, 8, 8);
-    --main-color-transparent: rgba(27, 27, 27, 0.486);
+    --main-color-transparent: rgba(27, 27, 27, 0.658);
 }
 
 * {
@@ -239,8 +239,8 @@ footer {
 }
 
 #hamburger:hover {
-    transition: 200ms;
-    scale: 105%;
+    transition: 100ms;
+    scale: 103%;
 }
 
 #hamburger.ham-active {
@@ -514,6 +514,7 @@ footer {
 }
 
 .project_poster {
+    z-index: 1;
     border-radius: 1em;
     max-width: 100%;
     max-height: 100%;
@@ -962,7 +963,7 @@ footer {
         right: 0;
         height: 100%;
         position: fixed;
-        background-color: var(--main-color-transparent);
+        background-color: rgba(10, 10, 10, 0.747);
         align-items: center;
         flex-direction: column;
         justify-content: flex-start;
